# mipt_tp_2024_project

./: .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/: CApp.h  animation.h  assets_manager.h  assets_storage.h  base_eventlistener.h  dice_roller.h  entity.h  entitylist.h  equipment.h  eventmanager.h  globals.h  mouse_eventlisteners.h  playable_classes.h  playable_races.h  player.h  properties.h  room.h  turncontroller.h  turnmanager.h  types.h  utils.h
include/engine/: animation.h  assets_storage.h  dice_roller.h  engine_init.h  entity.h  entitylist.h  equipment.h  event_storage.h  globals.h  mouse_eventlisteners.h  playable_classes.h  playable_races.h  player.h  properties.h  renderer.h  room.h  turn_controller.h  types.h  utils.h
include/interface/: CApp.h  draw.h  init.h  input.h  interface.h  renderer.h  shared_vars.h
rooms/: room.json  room.txt
src/: CApp.cpp  animation.cpp  assets_manager.cpp  assets_storage.cpp  dice_roller.cpp  entity.cpp  entitylist.cpp  equipment.cpp  event_storage.cpp  eventmanager.cpp  globals.cpp  main.cpp  mouse_eventlisteners.cpp  playable_classes.cpp  playable_races.cpp  player.cpp  room.cpp  turn_controller.cpp  turncontroller.cpp  turnmanager.cpp  utils.cpp
src/engine/: animation.cpp  assets_storage.cpp  dice_roller.cpp  engine_init.cpp  entity.cpp  entitylist.cpp  equipment.cpp  event_storage.cpp  globals.cpp  mouse_eventlisteners.cpp  playable_classes.cpp  playable_races.cpp  player.cpp  renderer.cpp  room.cpp  turn_controller.cpp  utils.cpp
src/interface/: CApp.cpp  draw.cpp  init.cpp  input.cpp  renderer.cpp
